--- a/scss/style.scss
+++ b/scss/style.scss
@@ -132,10 +132,8 @@ $mobile: 539px;
 						line-height: 15px;
 						border-right: none;
 
-						>i {
-							
+						> i {
 						}
-
 					}
 				}
 			}
@@ -262,7 +260,6 @@ $mobile: 539px;
 	overflow: hidden;
 	position: relative;
 
-
 	.txt {
 		width: 60%;
 		position: absolute;
@@ -271,54 +268,68 @@ $mobile: 539px;
 		z-index: 2;
 
 		h1 {
-			font: 300 100px/1 "Spartan";
+			font: 300 85px/1 "Spartan";
 			color: #fff;
 			margin-bottom: 30px;
 		}
 		p {
-			font:  33px/1.5 "Spartan";
+			font: 27px/1.5 "Spartan";
 			letter-spacing: 1.5px;
 			color: #fff;
 			margin-bottom: 70px;
 		}
-		a{
-			display: inline-block;
-			width: 350px;
-			height: 70px;
-			background: #ccc;
-			color: #fff;
-			font:  30px/70px "Spartan";
-			text-align: center;
-			position: relative;
-			padding-right: 10px;
-			text-align: left;
-			padding-left: 40px;
-
-			img {
-				position: absolute;
-				right: 10%;
-				top: 50%;
-				transform: translateY(-50%);
-
-			}		
-		}
 	}
 	.visual_box {
-		width: 700px;
+		width: 600px;
 		height: 250px;
 		background: #fff;
 		position: absolute;
 		bottom: 0;
 		right: 0;
 		h2 {
-			font: bold 27px/1.3 "Spartan";
-			margin-top: 50px; margin-left: 100px;
+			font: bold 25px/1.3 "Spartan";
+			margin-top: 50px;
+			margin-left: 90px;
 		}
-		input[type="text"]{
-			width: 350px;
-			margin-left: 100px; margin-top: 30px;
+		input[type="text"] {
+			width: 150px;
+			margin-left: 90px;
+			margin-top: 30px;
 			border: none;
 			border-bottom: 4px solid #111;
+			outline: none;
+			transition: 0.5s;
+		}
+		.right_box {
+			position: absolute;
+			top: 125px;
+			right: 70px;
+
+			p {
+				display: inline-block;
+				font: bold 23px/1 "Spartan";
+				color: #111;
+				position: absolute;
+				bottom: 0px;
+				right: 50px;
+			}
+
+			.right1 {
+				display: inline-block;
+				width: 40px;
+				height: 40px;
+				border: 3px solid #111;
+				text-align: center;
+				font-size: 20px;
+				line-height: 35px;
+				color: #111;
+			}
+		}
+
+		&:hover {
+			input[type="text"] {
+				width: 300px;
+			}
 		}
 	}
 }
@@ -326,7 +337,7 @@ $mobile: 539px;
 #popup {
 	width: 400px;
 	height: 300px;
-	background: #fff;
+	background: rgba(255, 255, 255, 0.7);
 	padding: 20px;
 	box-sizing: border-box;
 	color: #111;
@@ -343,7 +354,7 @@ $mobile: 539px;
 
 		h1 {
 			text-align: center;
-			font: bold 30px/1 'Noto Sans KR';
+			font: bold 30px/1 "Noto Sans KR";
 		}
 
 		.pop_content {
@@ -361,13 +372,13 @@ $mobile: 539px;
 			float: left;
 
 			label {
-				font: bold 13px/1 'Noto Sans KR';
+				font: bold 13px/1 "Noto Sans KR";
 				margin-left: 4px;
 			}
 		}
 		.close {
 			float: right;
-			font: 14px/1 'Noto Sans KR';
+			font: 14px/1 "Noto Sans KR";
 			color: #111;
 		}
 	}
@@ -376,79 +387,110 @@ $mobile: 539px;
 //  news ---------------------------------------------------------------
 #news {
 	width: 100%;
-	padding: 100px 0;
-	background-color: rgba(233, 175, 180, 0.562);
+	padding: 170px 0;
+	background: #fff;
 
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
-		text-align: center;
 
 		h1 {
 			display: inline-block;
-			font: 700 25px/1 "Spartan";
-			color: rgb(206, 97, 111);
+			font: bold 35px/1.5 "Spartan";
+			color: #111;
 			margin-bottom: 25px;
+			text-align: left;
 		}
-		h2 {
-			font: 100 17px/1 "Spartan";
-			color: #fff;
-			margin-bottom: 50px;
+		.header_txt {
+			font: 600 17px/1.6 "Spartan";
+			color: #111;
+			float: right;
+			margin-top: 40px;
+			text-align: left;
+			position: relative;
+
+			&::before {
+				content: "";
+				display: block;
+				width: 50px;
+				height: 2px;
+				background: #111;
+				position: absolute;
+				left: -70px;
+				top: 10px;
+			}
 		}
+
 		.wrap {
 			width: 100%;
-			margin: 0 auto;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			flex-direction: row;
+			// margin-top: 50px;
+			// margin-bottom: 150px;
+			// text-align: center;
+			// float: left;
 
 			article {
-				width: 280px;
-				height: 280px;
+				width: 360px;
+				height: 200px;
 				margin: 0 auto;
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				align-items: center;
+				text-align: left;
+				margin-right: 50px;
+				margin-bottom: 50px;
+				background: #efefef;
+				position: relative;
+				float: left;
 				transition: 0.5s;
+				padding: 40px;
 
-				.icon {
-					display: inline-block;
-
-					i {
-						font-size: 30px;
-						color: rgb(206, 97, 111);
-					}
+				&:hover {
+					background: #fff;
+					box-shadow: 0px 10px 15px 10px rgba(0, 0, 0, 0.05);
 				}
-				.news_txt {
-					width: 80%;
-					h2 {
-						margin-bottom: 10px;
-						margin-top: 10px;
 
-						a {
-							display: inline-block;
-							font: bold 16px/30px "Spartan";
-							width: 150px;
-							height: 30px;
-							// background: #97ccb8;
-							// border: 1px dashed rgb(255, 189, 199);
-							text-align: center;
-							color: rgb(206, 97, 111);
-							box-sizing: border-box;
-						}
-						&:hover a {
-							background: rgb(255, 189, 199);
-							border: 1px dashed transparent;
-							border: none;
-							color: #fff;
-						}
+				&:nth-of-type(3n + 0) {
+					margin-right: 0;
+				}
+				p {
+					font: bold 23px/1 "Spartan";
+					color: #111;
+					margin-bottom: 15px;
+				}
+				span {
+					font: 500 15px/1.5 "Spartan";
+					color: #111;
+				}
+				i {
+					position: absolute;
+					top: 35px;
+					right: 30px;
+					font-size: 30px;
+					color: #111;
+				}
+
+				.arrow {
+					position: relative;
+					width: 44px;
+					height: 10px;
+					margin-top: 20px;
+					&::before {
+						content: "";
+						display: block;
+						position: absolute;
+						left: 0;
+						top: 4px;
+						width: 43px;
+						height: 2px;
+						background: #000;
 					}
-
-					p {
-						font: 14px/1.4 "Spartan";
-						color: #fff;
+					&::after {
+						width: 0px;
+						content: "";
+						display: block;
+						position: absolute;
+						right: 0px;
+						height: 0px;
+						border-bottom: 5px solid transparent;
+						border-top: 5px solid transparent;
+						border-left: 5px solid #000;
 					}
 				}
 			}
@@ -458,24 +500,34 @@ $mobile: 539px;
 //  brand ---------------------------------------------------------------
 #product {
 	width: 100%;
-	padding: 200px 0;
+	padding: 100px 0;
 	background: #fff;
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
 		position: relative;
-		text-align: center;
 
 		h1 {
 			font: bold 35px/1 "Spartan";
 			color: #111;
-			text-align: center;
+			text-align: left;
 			margin-bottom: 40px;
+
+			&::after {
+				content: "";
+				display: block;
+				width: 83%;
+				height: 2px;
+				background: #111;
+				position: absolute;
+				top: 16px;
+				right: 0px;
+			}
 		}
-		>a{
-			display: inline;
+		a {
+			display: inline-block;
 			height: 50px;
-			font: bold 25px/50px 'Spartan';
+			font: bold 25px/50px "Spartan";
 			border: 1px solid #888;
 			color: #888;
 			border-radius: 30px;
@@ -489,126 +541,19 @@ $mobile: 539px;
 				border: none;
 				color: #fff;
 			}
-
-			
 		}
 		.wrap {
 			width: 100%;
-
-			.product_slider {
-				width: 100%;
-				height: 100%;
-				overflow: hidden;
-				transition: 1s;
-
-				.product_list {
-					width: 3600px;
-					height: 100%;
-					overflow: hidden;
-					
-
-					li {
-						width: 360px;
-						height: 500px;
-						float: left;
-						margin-right: 40px;
-						border-radius: 10px;
-						margin-top: 50px;
-						position: relative;
-						text-align: center;
-						
-
-						&[data-index="1"] {
-							background: rgb(156, 198, 237);
-						}
-						&[data-index="2"] {
-							background: rgb(255, 218, 223);
-						}
-						&[data-index="3"] {
-							background: rgb(255, 238, 168);
-						}
-						&[data-index="4"] {
-							background: rgb(179, 255, 194);
-						}
-						&[data-index="5"] {
-							background: #77A1D3;
-						}
-						&[data-index="6"] {
-							background: #fbc7d4;
-						}
-						&[data-index="7"] {
-							background: #1488CC;
-						}
-						&[data-index="8"] {
-							background: #B79891;
-						}
-						&[data-index="9"] {
-							background: #536976;
-						}
-
-						.txt {
-							position: absolute;
-							bottom: 10%;
-							left: 50%;
-							transform: translateX(-50%);
-
-							h2 {
-								font: bold 23px/1 "Spartan";
-								color: #111;
-								margin-bottom: 10px;
-							}
-							p {
-								font: bold 20px/1.5 "Noto Sans KR";
-								color: #111;
-								letter-spacing: 1.5px;
-								margin-bottom: 20px;
-							}
-
-							a {
-								// display: inline-block;
-								// width: 45px;
-								// height: 45px;
-								// border-radius:50%;
-								// border: 4px solid #fff;
-								// box-sizing: border-box;
-								// margin-right: 10px;
-								// box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.03);
-
-								// &:nth-of-type(1) {
-								// 	background: #7f8388;
-								// }
-								// &:nth-of-type(2) {
-								// 	background: #a3a3a3;
-								// }
-								// &:nth-of-type(3) {
-								// 	background: #d3d3d3;
-								// 	margin-right: 0px;
-
-								display: inline-block;
-								width: 180px;
-								height: 50px;
-								border: 1px solid #fff;
-								font: bold 15px/50px 'Spartan';
-								text-align: center;
-								color: #fff;
-
-
-								}
-							}
-						}
-					}
-				}
-			}
 		}
 	}
-
+}
 
 //  banner ---------------------------------------------------------------
 #banner {
 	width: 100%;
 	padding: 80px 0;
 	// background: url(../img/banner2.jpg) no-repeat center/cover fixed;
-	background: rgb(156, 198, 237);
+	background: #ddd;
 	background-image: rgba(0, 0, 0, 0.02);
 
 	.inner {
@@ -648,7 +593,6 @@ $mobile: 539px;
 				color: #fff;
 				font: bold 15px/60px "Spartan";
 				position: relative;
-	
 
 				&:last-child {
 					width: 150px;
@@ -866,12 +810,10 @@ $mobile: 539px;
 		h1 {
 			@include title();
 			text-align: center;
-			
 		}
 
 		.wrap {
 			width: 100%;
-
 		}
 	}
 }
