--- a/css/style.css
+++ b/css/style.css
@@ -2094,7 +2094,7 @@ fieldset {
 
 #news {
   width: 100%;
-  padding: 170px 0;
+  padding: 200px 0;
   background: #fff; }
   #news .inner {
     width: 1180px;
@@ -2122,7 +2122,8 @@ fieldset {
         left: -70px;
         top: 10px; }
     #news .inner .wrap {
-      width: 100%; }
+      width: 100%;
+      margin-top: 60px; }
       #news .inner .wrap article {
         width: 360px;
         height: 200px;
@@ -2216,7 +2217,124 @@ fieldset {
         border: none;
         color: #fff; }
     #product .inner .wrap {
-      width: 100%; }
+      width: 100%;
+      margin-top: 70px; }
+      #product .inner .wrap .box1 {
+        width: 560px;
+        float: left;
+        margin-right: 30px; }
+        #product .inner .wrap .box1 .pic {
+          width: 100%;
+          height: 350px;
+          background: url(../img/product4.jpg) no-repeat center/cover; }
+        #product .inner .wrap .box1 p {
+          font: bold 20px/1.5 "Spartan";
+          margin-top: 30px;
+          margin-bottom: 15px;
+          color: #111; }
+        #product .inner .wrap .box1 span {
+          font: 17px/1.5 "Spartan";
+          color: #777; }
+      #product .inner .wrap .box2 {
+        width: 560px;
+        padding-bottom: 40px;
+        border-bottom: 2px solid #888;
+        float: right; }
+        #product .inner .wrap .box2 .pic {
+          width: 170px;
+          height: 130px;
+          background: url(../img/product5.jpg) no-repeat center/cover;
+          float: right; }
+        #product .inner .wrap .box2 .txt_box {
+          margin-top: 20px; }
+          #product .inner .wrap .box2 .txt_box p {
+            width: 70%;
+            font: bold 16px/1.4 "Spartan";
+            margin-bottom: 15px; }
+          #product .inner .wrap .box2 .txt_box span {
+            font: 15px/1.5 "Spartan";
+            color: #777; }
+      #product .inner .wrap .box3 {
+        width: 560px;
+        margin-top: 40px;
+        float: right; }
+        #product .inner .wrap .box3 .pic {
+          width: 170px;
+          height: 130px;
+          background: url(../img/product6.jpg) no-repeat center/cover;
+          float: right; }
+        #product .inner .wrap .box3 .txt_box {
+          margin-top: 20px; }
+          #product .inner .wrap .box3 .txt_box p {
+            width: 70%;
+            font: bold 16px/1.4 "Spartan";
+            margin-bottom: 15px; }
+          #product .inner .wrap .box3 .txt_box span {
+            font: 15px/1.5 "Spartan";
+            color: #777; }
+
+#brand {
+  width: 100%;
+  padding: 200px 0;
+  background: #fff; }
+  #brand .inner {
+    width: 1180px;
+    margin: 0 auto;
+    position: relative; }
+    #brand .inner h1 {
+      font: bold 35px/1.5 "Spartan";
+      letter-spacing: 1.3px;
+      text-align: left; }
+    #brand .inner .wrap {
+      width: 100%;
+      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: end; }
+      #brand .inner .wrap article {
+        width: 650px;
+        float: right;
+        display: block;
+        margin-bottom: 40px; }
+        #brand .inner .wrap article h2 {
+          font: 500 23px/1 "Spartan";
+          color: #111;
+          border-bottom: 1px solid #444;
+          padding-bottom: 15px;
+          letter-spacing: 1.3px;
+          position: relative; }
+          #brand .inner .wrap article h2:nth-of-type(1)::after {
+            content: "";
+            display: block;
+            width: 30px;
+            height: 2px;
+            background: #111;
+            position: absolute;
+            right: 0;
+            top: 14.5px; }
+          #brand .inner .wrap article h2:nth-of-type(2)::after {
+            content: "";
+            display: block;
+            width: 30px;
+            height: 2px;
+            background: #111;
+            position: absolute;
+            right: 0;
+            top: 14.5px; }
+        #brand .inner .wrap article p {
+          display: inline-block;
+          width: 56%;
+          margin-top: 30px;
+          margin-bottom: 40px;
+          font: 15px/1.5 "Spartan";
+          letter-spacing: 1.3px;
+          color: #333; }
+        #brand .inner .wrap article span {
+          float: right;
+          margin-top: 30px;
+          border-bottom: 1px solid #444;
+          color: #555;
+          font: 14px/1.3 "Spartan"; }
 
 #banner {
   width: 100%;
@@ -2272,143 +2390,6 @@ fieldset {
           line-height: 60px; }
           #banner .inner .box a i:last-child {
             right: 50px; }
-
-#brand {
-  width: 100%;
-  padding: 200px 0;
-  background: #fcf9f9; }
-  #brand .inner {
-    width: 1180px;
-    margin: 0 auto;
-    position: relative; }
-    #brand .inner h1 {
-      font: bold 24px "Spartan";
-      color: #555;
-      text-align: center;
-      margin-bottom: 50px;
-      position: absolute;
-      top: -99999px;
-      opacity: 0; }
-    #brand .inner .wrap {
-      width: 100%; }
-      #brand .inner .wrap article:nth-of-type(1) {
-        width: 380px;
-        margin-right: 20px;
-        float: left; }
-        #brand .inner .wrap article:nth-of-type(1) .txt {
-          width: 85%;
-          padding: 15px;
-          box-sizing: border-box;
-          text-align: center; }
-          #brand .inner .wrap article:nth-of-type(1) .txt h2 {
-            width: 50%;
-            font: 700 18px/1 "Spartan";
-            color: #222;
-            margin-bottom: 20px;
-            text-align: left;
-            border-top: 1px solid #222;
-            padding-top: 20px; }
-          #brand .inner .wrap article:nth-of-type(1) .txt P {
-            font: 600 25px/1.3 "Spartan";
-            color: #222;
-            text-align: left;
-            margin-bottom: 20px;
-            position: relative;
-            padding-bottom: 20px; }
-            #brand .inner .wrap article:nth-of-type(1) .txt P::after {
-              content: "";
-              display: block;
-              width: 80px;
-              height: 1px;
-              background: #222;
-              position: absolute;
-              bottom: 0;
-              left: 0px; }
-          #brand .inner .wrap article:nth-of-type(1) .txt a {
-            display: block;
-            width: 150px;
-            height: 30px;
-            border: 1px solid #333;
-            color: #222;
-            font: bold 14px/30px "Spartan";
-            text-align: center; }
-      #brand .inner .wrap article:nth-of-type(2) {
-        width: 380px;
-        background: #fff;
-        margin-right: 20px;
-        float: left;
-        position: relative; }
-        #brand .inner .wrap article:nth-of-type(2) .pic {
-          width: 100%;
-          height: 150px;
-          background: #fbc7d4;
-          object-fit: cover; }
-        #brand .inner .wrap article:nth-of-type(2) .txt {
-          width: 100%;
-          background: #fff;
-          padding: 30px;
-          box-sizing: border-box;
-          text-align: center; }
-          #brand .inner .wrap article:nth-of-type(2) .txt h2 {
-            font: 100 20px/1 "Spartan";
-            color: #222;
-            text-align: left;
-            margin-bottom: 15px; }
-          #brand .inner .wrap article:nth-of-type(2) .txt p {
-            font: 15px/1.3 "Spartan";
-            text-align: left; }
-          #brand .inner .wrap article:nth-of-type(2) .txt a {
-            display: block;
-            width: 30px;
-            height: 30px;
-            font-size: 15px;
-            color: #ffbdc7;
-            border: 1px dashed #222;
-            text-align: center;
-            line-height: 30px;
-            border-radius: 50%;
-            position: absolute;
-            right: 15px;
-            top: 63%;
-            transform: translateY(-63%); }
-      #brand .inner .wrap article:nth-of-type(3) {
-        width: 380px;
-        background: #fff;
-        float: left;
-        position: relative; }
-        #brand .inner .wrap article:nth-of-type(3) .pic {
-          width: 100%;
-          height: 150px;
-          background: #fbc7d4;
-          object-fit: cover; }
-        #brand .inner .wrap article:nth-of-type(3) .txt {
-          width: 100%;
-          background: #fff;
-          padding: 30px;
-          box-sizing: border-box;
-          text-align: center; }
-          #brand .inner .wrap article:nth-of-type(3) .txt h2 {
-            font: 100 20px/1 "Spartan";
-            color: #222;
-            text-align: left;
-            margin-bottom: 15px; }
-          #brand .inner .wrap article:nth-of-type(3) .txt p {
-            font: 15px/1.3 "Spartan";
-            text-align: left; }
-          #brand .inner .wrap article:nth-of-type(3) .txt a {
-            display: block;
-            width: 30px;
-            height: 30px;
-            font-size: 15px;
-            color: #ffbdc7;
-            border: 1px dashed #222;
-            text-align: center;
-            line-height: 30px;
-            border-radius: 50%;
-            position: absolute;
-            right: 15px;
-            top: 63%;
-            transform: translateY(-63%); }
 
 #comment {
   width: 100%;
