--- a/scss/style.scss
+++ b/scss/style.scss
@@ -387,7 +387,7 @@ $mobile: 539px;
 //  news ---------------------------------------------------------------
 #news {
 	width: 100%;
-	padding: 170px 0;
+	padding: 200px 0;
 	background: #fff;
 
 	.inner {
@@ -423,6 +423,7 @@ $mobile: 539px;
 
 		.wrap {
 			width: 100%;
+			margin-top: 60px;
 			// margin-top: 50px;
 			// margin-bottom: 150px;
 			// text-align: center;
@@ -544,6 +545,157 @@ $mobile: 539px;
 		}
 		.wrap {
 			width: 100%;
+			margin-top: 70px;
+			.box1 {
+				width: 560px;
+				float: left;
+				margin-right: 30px;
+				.pic {
+					width: 100%;
+					height: 350px;
+					background: url(../img/product4.jpg) no-repeat center/cover;
+				}
+				p {
+					font: bold 20px/1.5 "Spartan";
+					margin-top: 30px;
+					margin-bottom: 15px;
+					color: #111;
+				}
+				span {
+					font: 17px/1.5 "Spartan";
+					color: #777;
+				}
+			}
+			.box2 {
+				width: 560px;
+				padding-bottom: 40px;
+				border-bottom: 2px solid #888;
+				float: right;
+
+				.pic {
+					width: 170px;
+					height: 130px;
+					background: url(../img/product5.jpg) no-repeat center/cover;
+					float: right;
+				}
+				.txt_box {
+					margin-top: 20px;
+					p {
+						width: 70%;
+						font: bold 16px/1.4 "Spartan";
+						margin-bottom: 15px;
+					}
+					span {
+						font: 15px/1.5 "Spartan";
+						color: #777;
+					}
+				}
+			}
+			.box3 {
+				width: 560px;
+				margin-top: 40px;
+				float: right;
+
+				.pic {
+					width: 170px;
+					height: 130px;
+					background: url(../img/product6.jpg) no-repeat center/cover;
+					float: right;
+				}
+				.txt_box {
+					margin-top: 20px;
+					p {
+						width: 70%;
+						font: bold 16px/1.4 "Spartan";
+						margin-bottom: 15px;
+					}
+					span {
+						font: 15px/1.5 "Spartan";
+						color: #777;
+					}
+				}
+			}
+		}
+	}
+}
+
+//  brand ---------------------------------------------------------------
+#brand {
+	width: 100%;
+	padding: 200px 0;
+	background: #fff;
+	.inner {
+		width: 1180px;
+		margin: 0 auto;
+		position: relative;
+
+		h1 {
+			font: bold 35px/1.5 "Spartan";
+			letter-spacing: 1.3px;
+			text-align: left;
+		}
+
+		.wrap {
+			width: 100%;
+			margin-top: 30px;
+			display: flex;
+			flex-direction: column;
+			align-items: end;
+
+			article {
+				width: 650px;
+				float: right;
+				display: block;
+				margin-bottom: 40px;
+
+
+				h2 {
+					font: 500 23px/1 "Spartan";
+					color: #111;
+					border-bottom: 1px solid #444;
+					padding-bottom: 15px;
+					letter-spacing: 1.3px;
+					position: relative;
+
+					&:nth-of-type(1)::after{
+						content: "";
+						display: block;
+						width: 30px;
+						height: 2px;
+						background: #111;
+						position: absolute;
+						right: 0;
+						top: 14.5px;
+					}
+					&:nth-of-type(2)::after{
+						content: "";
+						display: block;
+						width: 30px;
+						height: 2px;
+						background: #111;
+						position: absolute;
+						right: 0;
+						top: 14.5px;
+					}
+				}
+				p {
+					display: inline-block;
+					width: 56%;
+					margin-top: 30px;
+					margin-bottom: 40px;
+					font: 15px/1.5 "Spartan";
+					letter-spacing: 1.3px;
+					color: #333;
+				}
+				span {
+					float: right;
+					margin-top: 30px;
+					border-bottom: 1px solid #444;
+					color: #555;
+					font: 14px/1.3 "Spartan";
+				}
+
+			}
 		}
 	}
 }
@@ -617,178 +769,6 @@ $mobile: 539px;
 
 					&:last-child {
 						right: 50px;
-					}
-				}
-			}
-		}
-	}
-}
-//  brand ---------------------------------------------------------------
-#brand {
-	width: 100%;
-	padding: 200px 0;
-	background: #fcf9f9;
-	.inner {
-		width: 1180px;
-		margin: 0 auto;
-		position: relative;
-
-		h1 {
-			@include title();
-			position: absolute;
-			top: -99999px;
-			opacity: 0;
-		}
-
-		.wrap {
-			width: 100%;
-
-			article:nth-of-type(1) {
-				width: 380px;
-				// background: #444;
-				margin-right: 20px;
-				float: left;
-
-				.txt {
-					width: 85%;
-					// background: #fff;
-					padding: 15px;
-					box-sizing: border-box;
-					text-align: center;
-
-					h2 {
-						width: 50%;
-						font: 700 18px/1 "Spartan";
-						color: #222;
-						margin-bottom: 20px;
-						text-align: left;
-						border-top: 1px solid #222;
-						padding-top: 20px;
-					}
-					P {
-						font: 600 25px/1.3 "Spartan";
-						color: #222;
-						text-align: left;
-						margin-bottom: 20px;
-						position: relative;
-						padding-bottom: 20px;
-
-						&::after {
-							content: "";
-							display: block;
-							width: 80px;
-							height: 1px;
-							background: #222;
-							position: absolute;
-							bottom: 0;
-							left: 0px;
-						}
-					}
-					a {
-						display: block;
-						width: 150px;
-						height: 30px;
-						border: 1px solid #333;
-						color: #222;
-						font: bold 14px/30px "Spartan";
-						text-align: center;
-					}
-				}
-			}
-
-			article:nth-of-type(2) {
-				width: 380px;
-				background: #fff;
-				margin-right: 20px;
-				float: left;
-				position: relative;
-
-				.pic {
-					width: 100%;
-					height: 150px;
-					background: #fbc7d4;
-					object-fit: cover;
-				}
-				.txt {
-					width: 100%;
-					background: #fff;
-					padding: 30px;
-					box-sizing: border-box;
-					text-align: center;
-
-					h2 {
-						font: 100 20px/1 "Spartan";
-						color: #222;
-						text-align: left;
-						margin-bottom: 15px;
-					}
-					p {
-						font: 15px/1.3 "Spartan";
-						text-align: left;
-					}
-					a {
-						display: block;
-						width: 30px;
-						height: 30px;
-						font-size: 15px;
-						color: rgb(255, 189, 199);
-						// color: #222;
-						border: 1px dashed #222;
-						text-align: center;
-						line-height: 30px;
-						border-radius: 50%;
-						position: absolute;
-						right: 15px;
-						top: 63%;
-						transform: translateY(-63%);
-					}
-				}
-			}
-			article:nth-of-type(3) {
-				width: 380px;
-				background: #fff;
-				float: left;
-				position: relative;
-
-				.pic {
-					width: 100%;
-					height: 150px;
-					background: #fbc7d4;
-					object-fit: cover;
-				}
-
-				.txt {
-					width: 100%;
-					background: #fff;
-					padding: 30px;
-					box-sizing: border-box;
-					text-align: center;
-
-					h2 {
-						font: 100 20px/1 "Spartan";
-						color: #222;
-						text-align: left;
-						margin-bottom: 15px;
-					}
-					p {
-						font: 15px/1.3 "Spartan";
-						text-align: left;
-					}
-					a {
-						display: block;
-						width: 30px;
-						height: 30px;
-						font-size: 15px;
-						color: rgb(255, 189, 199);
-						// color: #222;
-						border: 1px dashed #222;
-						text-align: center;
-						line-height: 30px;
-						border-radius: 50%;
-						position: absolute;
-						right: 15px;
-						top: 63%;
-						transform: translateY(-63%);
 					}
 				}
 			}
