--- a/scss/style.scss
+++ b/scss/style.scss
@@ -387,7 +387,7 @@ $mobile: 539px;
 //  news ---------------------------------------------------------------
 #news {
 	width: 100%;
-	padding: 200px 0;
+	padding: 200px 0 180px;
 	background: #fff;
 
 	.inner {
@@ -633,6 +633,19 @@ $mobile: 539px;
 			font: bold 35px/1.5 "Spartan";
 			letter-spacing: 1.3px;
 			text-align: left;
+			position: relative;
+
+			&::after {
+				content: "loremislorem";
+				display: inline-block;
+				font:  13px/1 "Spartan";
+				color: #111;
+				position: absolute;
+				left: -120px;
+				bottom: 25px;
+				transform: rotate(-90deg);
+			}
+
 		}
 
 		.wrap {
@@ -648,7 +661,6 @@ $mobile: 539px;
 				display: block;
 				margin-bottom: 40px;
 
-
 				h2 {
 					font: 500 23px/1 "Spartan";
 					color: #111;
@@ -657,25 +669,31 @@ $mobile: 539px;
 					letter-spacing: 1.3px;
 					position: relative;
 
-					&:nth-of-type(1)::after{
-						content: "";
-						display: block;
+					.brand_arrow {
 						width: 30px;
-						height: 2px;
-						background: #111;
+						height: 30px;
 						position: absolute;
 						right: 0;
 						top: 14.5px;
-					}
-					&:nth-of-type(2)::after{
-						content: "";
-						display: block;
-						width: 30px;
-						height: 2px;
-						background: #111;
-						position: absolute;
-						right: 0;
-						top: 14.5px;
+
+						&:nth-of-type(1)::after {
+							content: "";
+							display: block;
+							width: 30px;
+							height: 2px;
+							background: #111;
+						}
+						&:nth-of-type(2)::after {
+							content: "";
+							display: block;
+							width: 30px;
+							height: 2px;
+							background: #111;
+							border-left: 1px solid #111;
+							position: absolute;
+							right: 0;
+							top: 14.5px;
+						}
 					}
 				}
 				p {
@@ -694,7 +712,6 @@ $mobile: 539px;
 					color: #555;
 					font: 14px/1.3 "Spartan";
 				}
-
 			}
 		}
 	}
