--- a/css/style.css
+++ b/css/style.css
@@ -2314,27 +2314,28 @@ fieldset {
           letter-spacing: 1.3px;
           position: relative; }
           #brand .inner .wrap article h2 .brand_arrow {
-            width: 30px;
-            height: 30px;
-            position: absolute;
-            right: 0;
-            top: 14.5px; }
-            #brand .inner .wrap article h2 .brand_arrow:nth-of-type(1)::after {
+            width: 18px;
+            height: 18px;
+            float: right;
+            position: relative; }
+            #brand .inner .wrap article h2 .brand_arrow::before {
               content: "";
               display: block;
-              width: 30px;
-              height: 2px;
-              background: #111; }
-            #brand .inner .wrap article h2 .brand_arrow:nth-of-type(2)::after {
-              content: "";
-              display: block;
-              width: 30px;
-              height: 2px;
+              width: 100%;
+              height: 1px;
               background: #111;
-              border-left: 1px solid #111;
               position: absolute;
-              right: 0;
-              top: 14.5px; }
+              top: 50%;
+              transform: translateY(-50%); }
+            #brand .inner .wrap article h2 .brand_arrow::after {
+              content: "";
+              display: block;
+              width: 1px;
+              height: 100%;
+              background: #111;
+              position: absolute;
+              left: 50%;
+              transform: translateX(-50%); }
         #brand .inner .wrap article p {
           display: inline-block;
           width: 56%;
@@ -2353,57 +2354,42 @@ fieldset {
 #banner {
   width: 100%;
   padding: 80px 0;
-  background: #ddd;
-  background-image: rgba(0, 0, 0, 0.02); }
+  background: #eee; }
   #banner .inner {
     width: 1180px;
     margin: 0 auto;
-    text-align: center; }
+    text-align: left;
+    position: relative; }
     #banner .inner h1 {
-      font: bold 15px/1 "spartan";
-      color: #fff;
-      margin-bottom: 15px; }
-    #banner .inner h2 {
-      font: bold 35px/1 "spartan";
-      color: #fff;
-      margin-bottom: 15px; }
-    #banner .inner p {
-      font: 16px/1.3 "arial";
-      color: #fff;
-      text-align: center;
-      margin-bottom: 35px; }
-    #banner .inner .box {
-      width: 100%;
-      text-align: center;
-      margin-left: 20px; }
-      #banner .inner .box a {
-        text-align: left;
-        padding-left: 20px;
-        display: inline-block;
-        width: 300px;
-        height: 60px;
-        margin-right: 10px;
-        background: rgba(0, 0, 0, 0.8);
-        color: #fff;
-        font: bold 15px/60px "Spartan";
-        position: relative; }
-        #banner .inner .box a:last-child {
-          width: 150px;
-          border: 1px solid #fff;
-          margin-right: 0;
-          background: rgba(0, 0, 0, 0.05);
-          box-sizing: border-box; }
-        #banner .inner .box a:hover {
-          border: 1px solid #fff; }
-          #banner .inner .box a:hover:hover:last-child {
-            background: rgba(237, 176, 176, 0.8); }
-        #banner .inner .box a i {
-          position: absolute;
-          right: 20px;
-          font-size: 15px;
-          line-height: 60px; }
-          #banner .inner .box a i:last-child {
-            right: 50px; }
+      display: inline-block;
+      text-align: left;
+      font: bold 35px/1.7 "spartan";
+      color: #dd7b8b;
+      margin: 40px 0; }
+    #banner .inner .btn_box {
+      float: right;
+      text-align: left;
+      margin-top: 50px; }
+      #banner .inner .btn_box h2 {
+        font: 23px/1 "Spartan";
+        margin-bottom: 30px; }
+      #banner .inner .btn_box input[type="text"] {
+        width: 400px;
+        border: none;
+        border-bottom: 2px solid #888;
+        font: 16px/1 "Spartan";
+        background: none;
+        padding: 10px 0px;
+        outline: none; }
+      #banner .inner .btn_box button {
+        width: 100px;
+        height: 50px;
+        font: 500 18px/1 "Spartan";
+        border-radius: 0;
+        background: none;
+        box-sizing: border-box;
+        color: #111;
+        margin-left: 15px; }
 
 #comment {
   width: 100%;
