--- a/scss/style.scss
+++ b/scss/style.scss
@@ -638,14 +638,13 @@ $mobile: 539px;
 			&::after {
 				content: "loremislorem";
 				display: inline-block;
-				font:  13px/1 "Spartan";
+				font: 13px/1 "Spartan";
 				color: #111;
 				position: absolute;
 				left: -120px;
 				bottom: 25px;
 				transform: rotate(-90deg);
 			}
-
 		}
 
 		.wrap {
@@ -669,30 +668,36 @@ $mobile: 539px;
 					letter-spacing: 1.3px;
 					position: relative;
 
+					
 					.brand_arrow {
-						width: 30px;
-						height: 30px;
-						position: absolute;
-						right: 0;
-						top: 14.5px;
+						width: 18px;
+						height: 18px;
+						float: right;
+						position: relative;
 
-						&:nth-of-type(1)::after {
+						// &:nth-of-type(1)::after{
+						// 	display: none;
+						// }
+
+						&::before {
 							content: "";
 							display: block;
-							width: 30px;
-							height: 2px;
+							width: 100%;
+							height: 1px;
 							background: #111;
-						}
-						&:nth-of-type(2)::after {
-							content: "";
-							display: block;
-							width: 30px;
-							height: 2px;
-							background: #111;
-							border-left: 1px solid #111;
 							position: absolute;
-							right: 0;
-							top: 14.5px;
+							top: 50%;
+							transform: translateY(-50%);
+						}
+						&::after {
+							content: "";
+							display: block;
+							width: 1px;
+							height: 100%;
+							background: #111;
+							position: absolute;
+							left: 50%;
+							transform: translateX(-50%);
 						}
 					}
 				}
@@ -721,74 +726,54 @@ $mobile: 539px;
 #banner {
 	width: 100%;
 	padding: 80px 0;
-	// background: url(../img/banner2.jpg) no-repeat center/cover fixed;
-	background: #ddd;
-	background-image: rgba(0, 0, 0, 0.02);
+	background: #eee;
+	
+
 
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
-		text-align: center;
+		text-align: left;
+		position: relative;
 
 		h1 {
-			font: bold 15px/1 "spartan";
-			color: #fff;
-			margin-bottom: 15px;
+			display: inline-block;
+			text-align: left;
+			font: bold 35px/1.7 "spartan";
+			color: rgb(221, 123, 139);
+			margin: 40px 0;
 		}
-		h2 {
-			font: bold 35px/1 "spartan";
-			color: #fff;
-			margin-bottom: 15px;
-		}
-		p {
-			font: 16px/1.3 "arial";
-			color: #fff;
-			text-align: center;
-			margin-bottom: 35px;
-		}
-		.box {
-			width: 100%;
-			text-align: center;
-			margin-left: 20px;
+		.btn_box {
+			float: right;
+			text-align: left;
+			margin-top: 50px;
 
-			a {
-				text-align: left;
-				padding-left: 20px;
-				display: inline-block;
-				width: 300px;
-				height: 60px;
-				margin-right: 10px;
-				background: rgba(0, 0, 0, 0.8);
-				color: #fff;
-				font: bold 15px/60px "Spartan";
-				position: relative;
-
-				&:last-child {
-					width: 150px;
-					border: 1px solid #fff;
-					margin-right: 0;
-					background: rgba(0, 0, 0, 0.05);
-					box-sizing: border-box;
-				}
-				&:hover {
-					border: 1px solid #fff;
-
-					&:hover:last-child {
-						background: rgba(237, 176, 176, 0.8);
-					}
-				}
-
-				i {
-					position: absolute;
-					right: 20px;
-					font-size: 15px;
-					line-height: 60px;
-
-					&:last-child {
-						right: 50px;
-					}
-				}
+			h2 {
+				font: 23px/1 "Spartan";
+				margin-bottom: 30px;
 			}
+			input[type="text"] {
+				width: 400px;
+				border: none;
+				border-bottom: 2px solid #888;
+				font: 16px/1 "Spartan";
+				background: none;
+				padding: 10px 0px;
+				outline: none;
+			}
+			button {
+				width: 100px;
+				height: 50px;
+				font: 500 18px/1 "Spartan";
+				border-radius: 0;
+				background: none;
+				box-sizing: border-box;
+				color: #111;
+				margin-left: 15px;
+				
+			
+			}
+
 		}
 	}
 }
