--- a/css/style.css
+++ b/css/style.css
@@ -2171,7 +2171,17 @@ fieldset {
         position: relative;
         float: left;
         transition: 0.5s;
-        padding: 40px; }
+        padding: 40px;
+        transform: translateY(100px);
+        opacity: 0; }
+        #news .inner .wrap article:nth-of-type(1) {
+          transition-delay: 0s; }
+        #news .inner .wrap article:nth-of-type(2) {
+          transition-delay: 0.2s; }
+        #news .inner .wrap article:nth-of-type(3) {
+          transition-delay: 0.4s; }
+        #news .inner .wrap article:nth-of-type(4) {
+          transition-delay: 0.6s; }
         #news .inner .wrap article:hover {
           background: #fff;
           box-shadow: 0px 10px 15px 10px rgba(0, 0, 0, 0.05); }
@@ -2510,14 +2520,6 @@ fieldset {
         text-align: center;
         margin-left: 30px;
         transition: 0.7s; }
-        #comment .inner .wrap .list:nth-of-type(1) {
-          position: relative; }
-        #comment .inner .wrap .list:nth-of-type(2) {
-          position: absolute;
-          left: 380px; }
-        #comment .inner .wrap .list:nth-of-type(3) {
-          position: absolute;
-          left: 710px; }
         #comment .inner .wrap .list .pic {
           transform: translate(-50%, -50%);
           text-align: center;
@@ -2525,18 +2527,6 @@ fieldset {
           position: absolute;
           top: 50%;
           left: 50%; }
-          #comment .inner .wrap .list .pic p {
-            font: bold 15px/1.5 "Spartan";
-            margin-bottom: 20px;
-            color: #444;
-            transition: 0.7s; }
-          #comment .inner .wrap .list .pic i {
-            font-size: 23px;
-            color: #dd7b8b; }
-        #comment .inner .wrap .list:hover {
-          border-color: #dd7b8b; }
-          #comment .inner .wrap .list:hover p {
-            color: #dd7b8b; }
 
 #footer {
   width: 100%;
