2depth 수정작업중

--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -227,7 +227,7 @@
 				border: 1px solid #aaa;
 				margin-bottom: 30px;
 				text-align: left;
-				overflow: auto;
+				// overflow: auto;
 			}
 		}
 	}
