--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,7 @@ fieldset {
 
 #header_sub {
   width: 100%;
-  background: #fff;
-  overflow: hidden; }
+  background: #fff; }
   #header_sub .inner {
     width: 1180px;
     height: 100px;
@@ -55,9 +54,9 @@ fieldset {
         content: "";
         display: block;
         clear: both; }
-      #header_sub .inner .menuWeb #gnb li {
+      #header_sub .inner .menuWeb #gnb > li {
         float: left; }
-        #header_sub .inner .menuWeb #gnb li a {
+        #header_sub .inner .menuWeb #gnb > li > a {
           display: block;
           padding: 10px 20px;
           font: 400 12px/1 "Spartan";
@@ -65,7 +64,7 @@ fieldset {
           transition: 0.5s;
           box-sizing: border-box;
           border-top: 1px solid transparent; }
-          #header_sub .inner .menuWeb #gnb li a:nth-of-type(1)::after {
+          #header_sub .inner .menuWeb #gnb > li > a:nth-of-type(1)::after {
             content: "";
             display: inline-block;
             position: Absolute;
@@ -75,7 +74,44 @@ fieldset {
             width: 1px;
             height: 100%;
             background: #e0e0e0; }
-        #header_sub .inner .menuWeb #gnb li:hover a {
+        #header_sub .inner .menuWeb #gnb > li .sub {
+          width: 1180px;
+          height: 300px;
+          position: absolute;
+          top: 51px;
+          right: 0;
+          background: #fff;
+          display: none;
+          z-index: 3; }
+          #header_sub .inner .menuWeb #gnb > li .sub .left {
+            width: 30%;
+            height: 100%;
+            background: lightgreen;
+            float: left; }
+          #header_sub .inner .menuWeb #gnb > li .sub .right {
+            width: 70%;
+            height: 100%;
+            background: #fff;
+            float: right; }
+          #header_sub .inner .menuWeb #gnb > li .sub::before {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: -100%;
+            background: lightgreen; }
+          #header_sub .inner .menuWeb #gnb > li .sub::after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            right: -100%;
+            background: inherit; }
+        #header_sub .inner .menuWeb #gnb > li:hover a {
           color: #d8778f; }
     #header_sub .inner .menuWeb .util {
       position: absolute;
@@ -96,7 +132,7 @@ fieldset {
           padding: 10px 10px;
           transition: 0.5s;
           text-align: center; }
-        #header_sub .inner .menuWeb .util li:last-child a {
+        #header_sub .inner .menuWeb .util li:last-child > a {
           width: 30%;
           position: absolute;
           top: 55%;
@@ -941,8 +977,7 @@ fieldset {
         color: #888;
         border: 1px solid #aaa;
         margin-bottom: 30px;
-        text-align: left;
-        overflow: auto; }
+        text-align: left; }
 
 @media screen and (max-width: 1179px) {
   .join {
@@ -1725,7 +1760,7 @@ fieldset {
   height: 100%;
   text-align: center; }
   .location .sub_visual {
-    background-color: #bbb; }
+    background-color: #111; }
   .location .inner h1 {
     font: bold 50px/1 'Noto Sans KR';
     margin-bottom: 40px;
@@ -2167,21 +2202,13 @@ fieldset {
         text-align: left;
         margin-right: 50px;
         margin-bottom: 50px;
-        background: #efefef;
+        background: #ededed;
         position: relative;
         float: left;
         transition: 0.5s;
         padding: 40px;
         transform: translateY(100px);
         opacity: 0; }
-        #news .inner .wrap article:nth-of-type(1) {
-          transition-delay: 0s; }
-        #news .inner .wrap article:nth-of-type(2) {
-          transition-delay: 0.2s; }
-        #news .inner .wrap article:nth-of-type(3) {
-          transition-delay: 0.4s; }
-        #news .inner .wrap article:nth-of-type(4) {
-          transition-delay: 0.6s; }
         #news .inner .wrap article:hover {
           background: #fff;
           box-shadow: 0px 10px 15px 10px rgba(0, 0, 0, 0.05); }
@@ -2224,6 +2251,9 @@ fieldset {
             border-bottom: 5px solid transparent;
             border-top: 5px solid transparent;
             border-left: 5px solid #000; }
+  #news.on .inner .wrap article {
+    transform: translateY(0px);
+    opacity: 1; }
 
 #product {
   width: 100%;
@@ -2331,7 +2361,10 @@ fieldset {
       font: bold 35px/1.5 "Spartan";
       letter-spacing: 1.3px;
       text-align: left;
-      position: relative; }
+      position: relative;
+      transition: 1s;
+      transform: translateY(-100px);
+      opacity: 0; }
       #brand .inner h1::after {
         content: "loremislorem";
         display: inline-block;
@@ -2396,6 +2429,9 @@ fieldset {
           border-bottom: 1px solid #444;
           color: #555;
           font: 14px/1.3 "Spartan"; }
+  #brand.on .inner h1 {
+    transform: translateY(0);
+    opacity: 1; }
 
 #banner {
   width: 100%;
@@ -2439,7 +2475,7 @@ fieldset {
 
 #podcasts {
   width: 100%;
-  padding: 170px 0;
+  padding: 200px 0;
   background: rgba(255, 252, 251, 0.8); }
   #podcasts .inner {
     width: 1180px;
@@ -2462,34 +2498,42 @@ fieldset {
         border-radius: 50%;
         text-align: center;
         margin-left: 30px;
-        transition: 0.7s; }
+        transition: 0.7s;
+        transform: translateY(100px);
+        opacity: 0; }
         #podcasts .inner .wrap article:nth-of-type(1) {
-          position: relative; }
+          position: relative;
+          transition-delay: 0s; }
         #podcasts .inner .wrap article:nth-of-type(2) {
           position: absolute;
-          left: 380px; }
+          left: 380px;
+          transition-delay: 0.4s; }
         #podcasts .inner .wrap article:nth-of-type(3) {
           position: absolute;
-          left: 710px; }
+          left: 710px;
+          transition-delay: 0.8s; }
         #podcasts .inner .wrap article .txt {
           transform: translate(-50%, -50%);
           text-align: center;
           margin: 0 auto;
           position: absolute;
-          top: 50%;
+          top: 60%;
           left: 50%; }
           #podcasts .inner .wrap article .txt p {
             font: bold 15px/1.5 "Spartan";
-            margin-bottom: 20px;
+            margin-bottom: 50px;
             color: #444;
             transition: 0.7s; }
           #podcasts .inner .wrap article .txt i {
-            font-size: 23px;
+            font-size: 20px;
             color: #dd7b8b; }
         #podcasts .inner .wrap article:hover {
           border-color: #dd7b8b; }
           #podcasts .inner .wrap article:hover p {
             color: #dd7b8b; }
+  #podcasts.on .inner .wrap article {
+    transform: translateY(0);
+    opacity: 1; }
 
 #comment {
   width: 100%;
@@ -2628,6 +2672,24 @@ fieldset {
           font-size: 20px;
           color: #fff;
           margin-right: 20px; }
+
+#navi {
+  position: fixed;
+  right: 50px;
+  top: 50%;
+  transform: translateY(-50%); }
+  #navi li {
+    margin: 20px 0; }
+    #navi li a {
+      display: block;
+      width: 10px;
+      height: 10px;
+      border-radius: 5px;
+      background: #888;
+      transition: 0.5s; }
+      #navi li a.on {
+        background: #111;
+        height: 60px; }
 
 @media screen and (max-width: 1179px) {
   #header .inner {
