--- a/scss/_sub_layout.scss
+++ b/scss/_sub_layout.scss
@@ -4,7 +4,7 @@
 #header_sub {
 	width: 100%;
 	background: #fff;
-	overflow: hidden;
+	// overflow: hidden;
 
 	.inner {
 		width: 1180px;
@@ -34,10 +34,10 @@
 					clear: both;
 				}
 
-				li {
+				> li {
 					float: left;
 
-					a {
+					> a {
 						display: block;
 						padding: 10px 20px;
 						font: 400 12px/1 "Spartan";
@@ -58,7 +58,49 @@
 							background: #e0e0e0;
 						}
 					}
+					.sub {
+						width: 1180px;
+						height: 300px;
+						position: absolute;
+						top: 51px;
+						right: 0;
+						background: #fff;
+						display: none;
+						z-index: 3;
 
+						.left {
+							width: 30%;
+							height: 100%;
+							background: lightgreen;
+							float: left;
+						}
+						.right {
+							width: 70%;
+							height: 100%;
+							background: #fff;
+							float: right;
+						}
+						&::before {
+							content: "";
+							display: block;
+							width: 100%;
+							height: 100%;
+							position: absolute;
+							top: 0;
+							left: -100%;
+							background: lightgreen;
+						}
+						&::after {
+							content: "";
+							display: block;
+							width: 100%;
+							height: 100%;
+							position: absolute;
+							top: 0;
+							right: -100%;
+							background: inherit;
+						}
+					}
 					&:hover a {
 						color: rgb(216, 119, 143);
 					}
@@ -88,7 +130,7 @@
 						text-align: center;
 					}
 
-					&:last-child a {
+					&:last-child > a {
 						width: 30%;
 						position: absolute;
 						top: 55%;
@@ -98,6 +140,9 @@
 						font-family: "Spartan";
 						line-height: 15px;
 						border-right: none;
+
+						// > i {
+						// }
 					}
 				}
 			}
@@ -215,6 +260,7 @@
 		}
 	}
 }
+
 
 // subpage content -------------------------------------------------
 .content {
