--- a/css/style.css
+++ b/css/style.css
@@ -2503,7 +2503,7 @@ fieldset {
           top: 60%;
           left: 50%; }
           #podcasts .inner .wrap article .txt p {
-            font: bold 15px/1.5 "Spartan";
+            font: bold 15px/1.5 "Noto Sans KR";
             margin-bottom: 50px;
             color: #444;
             transition: 0.7s; }
@@ -2518,42 +2518,113 @@ fieldset {
     transform: translateY(0);
     opacity: 1; }
 
-#comment {
+#content {
   width: 100%;
-  padding: 170px 0;
+  padding: 50px 0px 300px;
   background: rgba(255, 252, 251, 0.8); }
-  #comment .inner {
-    width: 1180px;
+  #content .inner {
+    width: 1200px;
     margin: 0 auto;
     position: relative; }
-    #comment .inner h1 {
+    #content .inner h1 {
       text-align: left;
-      font: bold 40px/1 "Spartan";
+      font: bold 25px/1.5 "Spartan";
       color: #111;
       margin-right: 50px;
       position: absolute;
       top: -99999px;
       opacity: 0; }
-    #comment .inner .wrap {
+    #content .inner .wrap {
       width: 100%;
       margin-top: 60px;
-      padding: 0px 50px; }
-      #comment .inner .wrap .list {
-        display: inline-block;
-        width: 360px;
-        height: 360px;
-        border: 1px solid #555;
-        border-radius: 50%;
-        text-align: center;
-        margin-left: 30px;
-        transition: 0.7s; }
-        #comment .inner .wrap .list .pic {
-          transform: translate(-50%, -50%);
-          text-align: center;
-          margin: 0 auto;
-          position: absolute;
-          top: 50%;
-          left: 50%; }
+      display: flex;
+      justify-content: space-between; }
+      #content .inner .wrap article:nth-of-type(1) h2 {
+        font: bold 25px/1.5 "Spartan";
+        color: #111;
+        margin-bottom: 30px;
+        margin-top: 80px; }
+      #content .inner .wrap article:nth-of-type(1) p {
+        font: 15px/1.5 "Spartan";
+        color: #888; }
+      #content .inner .wrap article:nth-of-type(2) {
+        width: 200px; }
+        #content .inner .wrap article:nth-of-type(2) ul {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-top: 80px; }
+          #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(1) {
+            font: bold 17px/1 "Spartan";
+            color: #111;
+            margin-bottom: 40px; }
+          #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(2) {
+            margin-bottom: 30px;
+            font: bold 15px/1 "Spartan";
+            color: #111; }
+            #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(2) i {
+              margin-right: 20px;
+              font-size: 25px; }
+          #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(3) {
+            margin-bottom: 30px;
+            font: bold 15px/1 "Spartan";
+            color: #111; }
+            #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(3) i {
+              margin-right: 20px;
+              font-size: 25px; }
+          #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(4) {
+            font: bold 15px/1 "Spartan";
+            color: #111; }
+            #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(4) i {
+              margin-right: 20px;
+              font-size: 25px; }
+      #content .inner .wrap article:nth-of-type(3) {
+        width: 5%; }
+        #content .inner .wrap article:nth-of-type(3) ul {
+          margin-top: 80px;
+          width: 80px; }
+          #content .inner .wrap article:nth-of-type(3) ul li {
+            width: 80px;
+            height: 90px;
+            margin-bottom: 10px; }
+            #content .inner .wrap article:nth-of-type(3) ul li:nth-of-type(1) {
+              background: url(../img/phone02.jpg) no-repeat center/cover; }
+            #content .inner .wrap article:nth-of-type(3) ul li:nth-of-type(2) {
+              background: url(../img/phone03.jpg) no-repeat center/cover; }
+            #content .inner .wrap article:nth-of-type(3) ul li:nth-of-type(3) {
+              background: url(../img/phone04.jpg) no-repeat center/cover;
+              margin-bottom: 0; }
+      #content .inner .wrap article:nth-of-type(4) {
+        width: 350px;
+        height: 450px;
+        position: relative; }
+        #content .inner .wrap article:nth-of-type(4) .pic {
+          width: 100%;
+          height: 100%;
+          background: url(../img/phone03.jpg) no-repeat center/cover; }
+          #content .inner .wrap article:nth-of-type(4) .pic span {
+            font: bold 25px/1.7 "arial";
+            color: #fff;
+            margin: 0 auto;
+            position: absolute;
+            top: 60%;
+            left: 30px; }
+          #content .inner .wrap article:nth-of-type(4) .pic .icon {
+            position: absolute;
+            bottom: 0px;
+            right: 0px;
+            width: 80px;
+            height: 80px;
+            background: #fff;
+            text-align: center;
+            font-size: 20px;
+            line-height: 80px; }
+            #content .inner .wrap article:nth-of-type(4) .pic .icon i {
+              color: #666; }
+        #content .inner .wrap article:nth-of-type(4) p {
+          margin-top: 20px;
+          font: bold 13px/1 "Spartan";
+          text-align: left; }
 
 #footer {
   width: 100%;
