메인페이지 작업중

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -990,6 +990,7 @@ $mobile: 539px;
 								i {
 									margin-right: 20px;
 									font-size: 25px;
+									color: rgb(221, 123, 139);
 								}
 							}
 							&:nth-of-type(3) {
@@ -999,6 +1000,7 @@ $mobile: 539px;
 								i {
 									margin-right: 20px;
 									font-size: 25px;
+									color: rgb(221, 123, 139);
 								}
 							}
 							&:nth-of-type(4) {
@@ -1007,6 +1009,7 @@ $mobile: 539px;
 								i {
 									margin-right: 20px;
 									font-size: 25px;
+									color: rgb(221, 123, 139);
 								}
 							}
 						}
@@ -1068,7 +1071,7 @@ $mobile: 539px;
 							line-height: 80px;
 
 							i {
-								color: #666;
+								color: rgb(221, 123, 139);
 							}
 						}
 					}
