--- a/css/style.css
+++ b/css/style.css
@@ -2564,20 +2564,23 @@ fieldset {
             color: #111; }
             #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(2) i {
               margin-right: 20px;
-              font-size: 25px; }
+              font-size: 25px;
+              color: #dd7b8b; }
           #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(3) {
             margin-bottom: 30px;
             font: bold 15px/1 "Spartan";
             color: #111; }
             #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(3) i {
               margin-right: 20px;
-              font-size: 25px; }
+              font-size: 25px;
+              color: #dd7b8b; }
           #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(4) {
             font: bold 15px/1 "Spartan";
             color: #111; }
             #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(4) i {
               margin-right: 20px;
-              font-size: 25px; }
+              font-size: 25px;
+              color: #dd7b8b; }
       #content .inner .wrap article:nth-of-type(3) {
         width: 5%; }
         #content .inner .wrap article:nth-of-type(3) ul {
@@ -2620,7 +2623,7 @@ fieldset {
             font-size: 20px;
             line-height: 80px; }
             #content .inner .wrap article:nth-of-type(4) .pic .icon i {
-              color: #666; }
+              color: #dd7b8b; }
         #content .inner .wrap article:nth-of-type(4) p {
           margin-top: 20px;
           font: bold 13px/1 "Spartan";
