메인페이지 순서 변경

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -755,11 +755,152 @@ $mobile: 539px;
 		}
 	}
 }
+//  podcasts ---------------------------------------------------------------
+#podcasts {
+	width: 100%;
+	padding: 200px 0;
+	background: rgba(255, 252, 251, 0.8);
 
+	.inner {
+		width: 1180px;
+		margin: 0 auto;
+		position: relative;
+
+		h1 {
+			text-align: right;
+			font: bold 40px/1 "Spartan";
+			color: rgb(221, 123, 139);
+			margin-right: 50px;
+		}
+
+		.wrap {
+			width: 100%;
+			margin-top: 60px;
+			padding: 0px 50px;
+
+			article {
+				display: inline-block;
+				// float: left;
+				width: 360px;
+				height: 360px;
+				border: 1px solid #555;
+				border-radius: 50%;
+				text-align: center;
+				margin-left: 30px;
+				transition: 0.7s;
+				transform: translateY(100px);
+				opacity: 0;
+
+				&:nth-of-type(1) {
+					position: relative;
+					transition-delay: 0s;
+				}
+				&:nth-of-type(2) {
+					position: absolute;
+					left: 380px;
+					transition-delay: 0.4s;
+					// margin-left: 0;
+				}
+				&:nth-of-type(3) {
+					position: absolute;
+					left: 710px;
+					transition-delay: 0.8s;
+					// margin-left: 0;
+				}
+				.txt {
+					transform: translate(-50%, -50%);
+					text-align: center;
+					margin: 0 auto;
+					position: absolute;
+					top: 60%;
+					left: 50%;
+
+					p {
+						font: bold 15px/1.5 "Noto Sans KR";
+						margin-bottom: 50px;
+						color: #444;
+						transition: 0.7s;
+					}
+					i {
+						font-size: 20px;
+						color: rgb(221, 123, 139);
+					}
+				}
+				&:hover {
+					border-color: rgb(221, 123, 139);
+					p {
+						color: rgb(221, 123, 139);
+					}
+				}
+			}
+		}
+	}
+	&.on {
+		.inner {
+			.wrap {
+				article {
+					transform: translateY(0);
+					opacity: 1;
+				}
+			}
+		}
+	}
+}
+
+//  banner ---------------------------------------------------------------
+#banner {
+	width: 100%;
+	padding: 80px 0;
+	background: #eee;
+
+	.inner {
+		width: 1180px;
+		margin: 0 auto;
+		text-align: left;
+		position: relative;
+
+		h1 {
+			display: inline-block;
+			text-align: left;
+			font: bold 33px/1.7 "spartan";
+			color: rgb(221, 123, 139);
+			margin: 40px 0;
+		}
+		.btn_box {
+			float: right;
+			text-align: left;
+			margin-top: 50px;
+
+			h2 {
+				font: 23px/1 "Spartan";
+				margin-bottom: 30px;
+			}
+			input[type="text"] {
+				width: 400px;
+				border: none;
+				border-bottom: 2px solid #888;
+				font: 16px/1 "Spartan";
+				background: none;
+				padding: 10px 0px;
+				outline: none;
+			}
+			button {
+				width: 100px;
+				height: 50px;
+				font: 500 18px/1 "Spartan";
+				border-radius: 0;
+				background: none;
+				box-sizing: border-box;
+				color: #111;
+				margin-left: 15px;
+			}
+		}
+	}
+}
 //  brand ---------------------------------------------------------------
 #brand {
 	width: 100%;
-	padding: 200px 0;
+	padding: 200px 0 150px;
 	background: #fff;
 	.inner {
 		width: 1180px;
@@ -869,148 +1010,6 @@ $mobile: 539px;
 	}
 }
 
-//  banner ---------------------------------------------------------------
-#banner {
-	width: 100%;
-	padding: 80px 0;
-	background: #eee;
-
-	.inner {
-		width: 1180px;
-		margin: 0 auto;
-		text-align: left;
-		position: relative;
-
-		h1 {
-			display: inline-block;
-			text-align: left;
-			font: bold 33px/1.7 "spartan";
-			color: rgb(221, 123, 139);
-			margin: 40px 0;
-		}
-		.btn_box {
-			float: right;
-			text-align: left;
-			margin-top: 50px;
-
-			h2 {
-				font: 23px/1 "Spartan";
-				margin-bottom: 30px;
-			}
-			input[type="text"] {
-				width: 400px;
-				border: none;
-				border-bottom: 2px solid #888;
-				font: 16px/1 "Spartan";
-				background: none;
-				padding: 10px 0px;
-				outline: none;
-			}
-			button {
-				width: 100px;
-				height: 50px;
-				font: 500 18px/1 "Spartan";
-				border-radius: 0;
-				background: none;
-				box-sizing: border-box;
-				color: #111;
-				margin-left: 15px;
-			}
-		}
-	}
-}
-
-//  podcasts ---------------------------------------------------------------
-#podcasts {
-	width: 100%;
-	padding: 200px 0;
-	background: rgba(255, 252, 251, 0.8);
-
-	.inner {
-		width: 1180px;
-		margin: 0 auto;
-		position: relative;
-
-		h1 {
-			text-align: right;
-			font: bold 40px/1 "Spartan";
-			color: rgb(221, 123, 139);
-			margin-right: 50px;
-		}
-
-		.wrap {
-			width: 100%;
-			margin-top: 60px;
-			padding: 0px 50px;
-
-			article {
-				display: inline-block;
-				// float: left;
-				width: 360px;
-				height: 360px;
-				border: 1px solid #555;
-				border-radius: 50%;
-				text-align: center;
-				margin-left: 30px;
-				transition: 0.7s;
-				transform: translateY(100px);
-				opacity: 0;
-
-				&:nth-of-type(1) {
-					position: relative;
-					transition-delay: 0s;
-				}
-				&:nth-of-type(2) {
-					position: absolute;
-					left: 380px;
-					transition-delay: 0.4s;
-					// margin-left: 0;
-				}
-				&:nth-of-type(3) {
-					position: absolute;
-					left: 710px;
-					transition-delay: 0.8s;
-					// margin-left: 0;
-				}
-				.txt {
-					transform: translate(-50%, -50%);
-					text-align: center;
-					margin: 0 auto;
-					position: absolute;
-					top: 60%;
-					left: 50%;
-
-					p {
-						font: bold 15px/1.5 "Noto Sans KR";
-						margin-bottom: 50px;
-						color: #444;
-						transition: 0.7s;
-					}
-					i {
-						font-size: 20px;
-						color: rgb(221, 123, 139);
-					}
-				}
-				&:hover {
-					border-color: rgb(221, 123, 139);
-					p {
-						color: rgb(221, 123, 139);
-					}
-				}
-			}
-		}
-	}
-	&.on {
-		.inner {
-			.wrap {
-				article {
-					transform: translateY(0);
-					opacity: 1;
-				}
-			}
-		}
-	}
-}
 //  content ---------------------------------------------------------------
 #content {
 	width: 100%;
