--- a/css/style.css
+++ b/css/style.css
@@ -2394,9 +2394,111 @@ fieldset {
             font: 15px/1.5 "Spartan";
             color: #dd7b8b; }
 
-#brand {
+#podcasts {
   width: 100%;
   padding: 200px 0;
+  background: rgba(255, 252, 251, 0.8); }
+  #podcasts .inner {
+    width: 1180px;
+    margin: 0 auto;
+    position: relative; }
+    #podcasts .inner h1 {
+      text-align: right;
+      font: bold 40px/1 "Spartan";
+      color: #dd7b8b;
+      margin-right: 50px; }
+    #podcasts .inner .wrap {
+      width: 100%;
+      margin-top: 60px;
+      padding: 0px 50px; }
+      #podcasts .inner .wrap article {
+        display: inline-block;
+        width: 360px;
+        height: 360px;
+        border: 1px solid #555;
+        border-radius: 50%;
+        text-align: center;
+        margin-left: 30px;
+        transition: 0.7s;
+        transform: translateY(100px);
+        opacity: 0; }
+        #podcasts .inner .wrap article:nth-of-type(1) {
+          position: relative;
+          transition-delay: 0s; }
+        #podcasts .inner .wrap article:nth-of-type(2) {
+          position: absolute;
+          left: 380px;
+          transition-delay: 0.4s; }
+        #podcasts .inner .wrap article:nth-of-type(3) {
+          position: absolute;
+          left: 710px;
+          transition-delay: 0.8s; }
+        #podcasts .inner .wrap article .txt {
+          transform: translate(-50%, -50%);
+          text-align: center;
+          margin: 0 auto;
+          position: absolute;
+          top: 60%;
+          left: 50%; }
+          #podcasts .inner .wrap article .txt p {
+            font: bold 15px/1.5 "Noto Sans KR";
+            margin-bottom: 50px;
+            color: #444;
+            transition: 0.7s; }
+          #podcasts .inner .wrap article .txt i {
+            font-size: 20px;
+            color: #dd7b8b; }
+        #podcasts .inner .wrap article:hover {
+          border-color: #dd7b8b; }
+          #podcasts .inner .wrap article:hover p {
+            color: #dd7b8b; }
+  #podcasts.on .inner .wrap article {
+    transform: translateY(0);
+    opacity: 1; }
+
+#banner {
+  width: 100%;
+  padding: 80px 0;
+  background: #eee; }
+  #banner .inner {
+    width: 1180px;
+    margin: 0 auto;
+    text-align: left;
+    position: relative; }
+    #banner .inner h1 {
+      display: inline-block;
+      text-align: left;
+      font: bold 33px/1.7 "spartan";
+      color: #dd7b8b;
+      margin: 40px 0; }
+    #banner .inner .btn_box {
+      float: right;
+      text-align: left;
+      margin-top: 50px; }
+      #banner .inner .btn_box h2 {
+        font: 23px/1 "Spartan";
+        margin-bottom: 30px; }
+      #banner .inner .btn_box input[type="text"] {
+        width: 400px;
+        border: none;
+        border-bottom: 2px solid #888;
+        font: 16px/1 "Spartan";
+        background: none;
+        padding: 10px 0px;
+        outline: none; }
+      #banner .inner .btn_box button {
+        width: 100px;
+        height: 50px;
+        font: 500 18px/1 "Spartan";
+        border-radius: 0;
+        background: none;
+        box-sizing: border-box;
+        color: #111;
+        margin-left: 15px; }
+
+#brand {
+  width: 100%;
+  padding: 200px 0 150px;
   background: #fff; }
   #brand .inner {
     width: 1180px;
@@ -2475,108 +2577,6 @@ fieldset {
           color: #555;
           font: 14px/1.3 "Spartan"; }
   #brand.on .inner h1 {
-    transform: translateY(0);
-    opacity: 1; }
-
-#banner {
-  width: 100%;
-  padding: 80px 0;
-  background: #eee; }
-  #banner .inner {
-    width: 1180px;
-    margin: 0 auto;
-    text-align: left;
-    position: relative; }
-    #banner .inner h1 {
-      display: inline-block;
-      text-align: left;
-      font: bold 33px/1.7 "spartan";
-      color: #dd7b8b;
-      margin: 40px 0; }
-    #banner .inner .btn_box {
-      float: right;
-      text-align: left;
-      margin-top: 50px; }
-      #banner .inner .btn_box h2 {
-        font: 23px/1 "Spartan";
-        margin-bottom: 30px; }
-      #banner .inner .btn_box input[type="text"] {
-        width: 400px;
-        border: none;
-        border-bottom: 2px solid #888;
-        font: 16px/1 "Spartan";
-        background: none;
-        padding: 10px 0px;
-        outline: none; }
-      #banner .inner .btn_box button {
-        width: 100px;
-        height: 50px;
-        font: 500 18px/1 "Spartan";
-        border-radius: 0;
-        background: none;
-        box-sizing: border-box;
-        color: #111;
-        margin-left: 15px; }
-
-#podcasts {
-  width: 100%;
-  padding: 200px 0;
-  background: rgba(255, 252, 251, 0.8); }
-  #podcasts .inner {
-    width: 1180px;
-    margin: 0 auto;
-    position: relative; }
-    #podcasts .inner h1 {
-      text-align: right;
-      font: bold 40px/1 "Spartan";
-      color: #dd7b8b;
-      margin-right: 50px; }
-    #podcasts .inner .wrap {
-      width: 100%;
-      margin-top: 60px;
-      padding: 0px 50px; }
-      #podcasts .inner .wrap article {
-        display: inline-block;
-        width: 360px;
-        height: 360px;
-        border: 1px solid #555;
-        border-radius: 50%;
-        text-align: center;
-        margin-left: 30px;
-        transition: 0.7s;
-        transform: translateY(100px);
-        opacity: 0; }
-        #podcasts .inner .wrap article:nth-of-type(1) {
-          position: relative;
-          transition-delay: 0s; }
-        #podcasts .inner .wrap article:nth-of-type(2) {
-          position: absolute;
-          left: 380px;
-          transition-delay: 0.4s; }
-        #podcasts .inner .wrap article:nth-of-type(3) {
-          position: absolute;
-          left: 710px;
-          transition-delay: 0.8s; }
-        #podcasts .inner .wrap article .txt {
-          transform: translate(-50%, -50%);
-          text-align: center;
-          margin: 0 auto;
-          position: absolute;
-          top: 60%;
-          left: 50%; }
-          #podcasts .inner .wrap article .txt p {
-            font: bold 15px/1.5 "Noto Sans KR";
-            margin-bottom: 50px;
-            color: #444;
-            transition: 0.7s; }
-          #podcasts .inner .wrap article .txt i {
-            font-size: 20px;
-            color: #dd7b8b; }
-        #podcasts .inner .wrap article:hover {
-          border-color: #dd7b8b; }
-          #podcasts .inner .wrap article:hover p {
-            color: #dd7b8b; }
-  #podcasts.on .inner .wrap article {
     transform: translateY(0);
     opacity: 1; }
 
